Exporting images from tenant to bigquery
